--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ POSTGRES_DB=clinicDb
 DB_PORT=5432
 DB_HOST=clinicDb
 
+# JWT
+JWT_DISABLE=false
+JWT_PRIVATE_KEY=jwt_private_key
+JWT_SECRET=jwt_secret
+JWT_ACCESS_EXPIRES_IN=5m
+JWT_REFRESH_EXPIRES_IN=15m
+
+# Hash
+BCRYPT_SALT=$2b$10$3aBZFgaCAb/OApBF.HC.K.
